--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /lss2/nbproject/private/
 /lss2/build/
+/Buoi2_bai1/nbproject/private/
+/Buoi2_bai1/build/
+/Buoi2_bai2/nbproject/private/
+/Buoi2_bai2/build/
