--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Buoi2_bai2/nbproject/private/
 /Buoi2_bai2/build/
 /Buoi2_bai1_kho/nbproject/private/
+/Buoi2_bai4/nbproject/private/
+/Buoi2_bai4/build/
+/Lss3/nbproject/private/
+/Lss3/build/
