--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /Buoi2_bai4/build/
 /Lss3/nbproject/private/
 /Lss3/build/
+/JavaApplication4/nbproject/private/
+/JavaApplication4/build/
+/BTVN_buoi1/nbproject/private/
+/BTVN_buoi2/nbproject/private/
+/BTVN_buoi2/build/
