--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /BTVN_buoi1/nbproject/private/
 /BTVN_buoi2/nbproject/private/
 /BTVN_buoi2/build/
+/BTVN_buoi3/nbproject/private/
+/BTVN_buoi3/build/
