--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /BTVN_buoi2/build/
 /BTVN_buoi3/nbproject/private/
 /BTVN_buoi3/build/
+/BTVN_buoi4/nbproject/private/
+/BTVN_buoi4/build/
+/Lss5/nbproject/private/
+/Lss5/build/
